# ChipSeeker

./: .gitignore  Arxiv_Grabber.py  Install_ChipSeeker.bat  Kill_ChipSeeker_Services.bat  Nature_Grabber.py  README.md  Science_Grabber.py  Start_ChipSeeker.bat  Uninstall_ChipSeeker.bat  app.py  config.example.json  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt  search.py  search_runtime.py
chipseeker/: __init__.py  agent_collect.py  agent_hydrate.py  agent_query_spec.py  agent_records.py  agent_search.py  app_main.py  cloud_access.py  config_store.py  conflict_review.py  content_pack.py  content_release.py  data_sync.py  domain_synonyms.py  embedding_scope.py  exports.py  keyword_search.py  literature_relevance.py  literature_update.py  llm_tools.py  maintenance.py  migrations.py  paths.py  result_cards.py  scoring.py  search_ui.py  task_queue.py  ultra_audit.py  ultra_workspace.py  update_history.py  update_manager.py  update_notices.json  update_notices.py  utils.py  venue_data.py  version.py  work_family.py
demo_data/: export2026.03.04-08.56.26.csv
scripts/: Kill_ChipSeeker_Services.ps1  Start_ChipSeeker_AutoStop.ps1  chipseeker_agent_audit.py  chipseeker_agent_collect.py  chipseeker_agent_expand_families.py  chipseeker_agent_expand_family.py  chipseeker_agent_hydrate.py  chipseeker_agent_search.py  chipseeker_ultra_workspace.py  curate_five_year_backfill.py  enrich_bibtex_metadata.py  run_literature_backfill.py  setup.ps1  setup.sh  uninstall.ps1
tests/: conftest.py  test_agent_collect.py  test_agent_hydrate.py  (+26 more)
(+13 files in other folders)
